@@ -506,8 +506,8 @@ write_uri_node(SerdWriter* const        writer,
                const Field              field,
                const SerdStatementFlags flags)
 {
-	SerdNode  prefix;
-	SerdChunk suffix;
+	SerdNode       prefix;
+	SerdStringView suffix;
 
 	if (is_inline_start(writer, field, flags)) {
 		++writer->indent;
@@ -575,10 +575,9 @@ write_curie(SerdWriter* const        writer,
             const Field              field,
             const SerdStatementFlags flags)
 {
-	SerdChunk  prefix = {NULL, 0};
-	SerdChunk  suffix = {NULL, 0};
-	SerdStatus st     = SERD_SUCCESS;
-
+	SerdStringView prefix = {NULL, 0};
+	SerdStringView suffix = {NULL, 0};
+	SerdStatus     st     = SERD_SUCCESS;
 	switch (writer->syntax) {
 	case SERD_NTRIPLES:
 	case SERD_NQUADS:
